# better-readmes

./: .dir-locals.el  .gitignore  README.ipynb  app.py  code-maat-architecture.mmd  config.py  forms.py  models.py  pyproject.toml  show_model_class_names.py
instance/: config.py
templates/: base.html  create_list.html  edit_item.html  index.html  list_detail.html
