[project]
name = "better-readmes"
version = "0.1.0"
description = "Show my READMEs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.1.1",
    "wtforms>=3.2.1",
]
